# nfchat

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  makeclean  newmake  nfchat.spec  xchat.desktop  xchat.spec
doc/: xchat-4.html
plugins/: SIGNALS
plugins/sample/: sample.c
po/: NF-chat.pot  POTFILES.in  cat-id-tbl.c  fr.po  nl.po  no  xchat.pot
scripts-perl/: xchatdox2.html
scripts-python/: NOTES
src/: Makefile.am  Makefile.in  cfgfiles.c  cfgfiles.h  ctcp.c  fe-gtk.c  fe-gtk.h  fe.h  fkeys.c  gtkutil.c  gtkutil.h  history.c  inbound.c  maingui.c  outbound.c  server.c  signals.c  signals.h  text.c  textgui.c  userlist.c  userlist.h  userlistgui.c  util.c  util.h  xchat.c  xchat.h  xtext.c  xtext.h
src/common/: Makefile.am  Makefile.in  cfgfiles.c  cfgfiles.h  ctcp.c  dcc.c  dcc.h  fe.h  history.h  ignore.c  ignore.h  inbound.c  notify.c  notify.h  outbound.c  perl.c  plugin.c  plugin.h  popup.h  pys_signals.h  python.c  server.c  sigextract.py  signals.c  text.c  themes-common.c  themes-common.h  userlist.c  util.c  xchat.c  xchat.h
src/fe-gtk/: Makefile.am  Makefile.in  about.c  ascii.c  chanlist.c  dccgui.c  dialog.c  editlist.c  fe-gtk.c  fe-gtk.h  fkeys.c  gtkutil.c  gtkutil.h  ignoregui.c  maingui.c  menu.c  menu.h  notifygui.c  palette.c  panel.c  panel.h  plugingui.c  rawlog.c  search.c  serverlist.c  serverlist.h  settings.c  settings.h  textgui.c  themes.c  themes.h  urlgrab.c  userlistgui.c  usermenu.c  usermenu.h  xtext.c  xtext.h
src/fe-text/: Makefile.am  Makefile.in  fe-text.c  fe-text.h  glib.c  myglib.h
src/pixmaps/: theme.xpm  xchat.xpm  xchat_mini.xpm
