## Process this file with automake to produce Makefile.in

bin_PROGRAMS = nfchat

LIBS = $(GUI_LIBS)

INCLUDES = \
	-I$(includedir)

nfchat_SOURCES = cfgfiles.c ctcp.c history.c inbound.c outbound.c \
		signals.c server.c text.c userlist.c util.c xchat.c \
		fe-gtk.c fkeys.c gtkutil.c maingui.c xtext.c
